--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+git-annex (5.20141024~bpo70+1) wheezy-backports; urgency=medium
+
+  * Updated backport to version 5.20141024.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 07 Nov 2014 13:38:01 -0400
+
 git-annex (5.20141024) unstable; urgency=medium
 
   * vicfg: Deleting configurations now resets to the default, where
